--- a/wsgi/templates/index.html
+++ b/wsgi/templates/index.html
@@ -43,7 +43,16 @@
         <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
 
-
+      <div class="page-header">
+        <h1>Example Flask form using WTForms</h1>
+      </div>
+      {% from "_formhelper.html" import render_field %}
+      <form role="form" action="" method=post>
+        {% for field in form %}
+          {{ render_field(field) }}
+        {% endfor %}
+        <button type="submit" class="btn btn-lg btn-success">Submit</button>
+      </form>
 
       <div class="page-header">
         <h1>Buttons</h1>
